# city2graph-case-study

./: .gitignore  README.md  pyproject.toml
configs/: experiment_config.yaml
notebooks/: 01_data_processing.ipynb  02_graph_construction.ipynb  03_model_training.ipynb
outputs/checkpoints/model1_gat_gae/: model.pt
outputs/checkpoints/model2_han_gae_street/: model.pt
outputs/checkpoints/model3_han_gae_multi/: model.pt
outputs/clusters/: baseline1_kmeans.csv  model1_gat_gae.csv  model2_han_gae_street.csv  model3_han_gae_multi.csv
outputs/embeddings/: model1_gat_gae.pt  model2_han_gae_street.pt  model3_han_gae_multi.pt
src/baselines/: kmeans.py
src/models/: __init__.py  gat_gae.py  han_gae.py  utils.py
